fix width of programm's block on mobile version

--- a/source/sass/blocks/index/programms.scss
+++ b/source/sass/blocks/index/programms.scss
@@ -23,7 +23,7 @@
             width: 708px;
         }
         @include mobile {
-            width: 280px;
+            width: 240px;
             padding: 20px;
         }
     }
